--- a/template/req.html
+++ b/template/req.html
@@ -156,11 +156,11 @@
 
 
             <div class="copyright ">
-                <h5 class="text-center">Copyright © 2023 <a href="https://t.me/DeletedFromEarth"><span
+                <h5 class="text-center">Copyright © 2023 <a href="https://t.me/Dudu_master"><span
                             style="font-weight: 700;">HP</span></a>. All
                     Rights Reserved.</h5>
                 <div class="icons">
-                    <a href="https://github.com/HarshalPurohitEdits"><i class="fa-brands fa-github fa-lg"></i></a>
+                    <a href="https://github.com/ankitkhandal74"><i class="fa-brands fa-github fa-lg"></i></a>
                     <a href="https://t.me/bisal_Files"><i class="fa-brands fa-telegram fa-lg"></i></a>
                 </div>
                 <h4 style="font-weight: 700;">This Page Is Designed By <a
