--- a/template/req.html
+++ b/template/req.html
@@ -56,6 +56,11 @@
                     width="100%"></video>
                 <div class="player"></div>
                 <div class="file-name">
+                    <h4>File url : </h4>
+                    <br>
+                    <p id="myDiv">{{file_url}}</p>
+                </div>
+                <div class="file-name">
                     <h4>File name : </h4>
                     <br>
                     <p id="myDiv">{{file_name}}</p>
